# emsdk

./: .gitignore  TOOLCHAIN_MODERNIZATION.md
.circleci/: config.yml  requirements-dev.txt
bazel/: .bazelrc  .bazelrc.without_flag  MODULE.bazel  PYTHON.md  README.md  bazelrc  emscripten_deps.bzl  emscripten_toolchain.bzl  extensions.bzl  platforms.bzl  remote_emscripten_repository.bzl
bazel/emscripten_toolchain/: BUILD.bazel  emar.sh  emcc.sh  emcc_link.sh  env.sh  find_python.sh  tool_launcher.py  toolchain.bzl
bazel/private/: BUILD.bazel
bazel/private/extensions/: BUILD.bazel  legacy_extension.bzl  toolchain_extension.bzl
bazel/private/repositories/: BUILD.bazel  repository_factory.bzl
bazel/test_external/: BUILD  MODULE.bazel
bazel/test_secondary_lto_cache/: .bazelrc
