module(
    name = "emsdk",
    version = "5.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_python", version = "1.8.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.18.0")
use_repo(node, "nodejs")

# Simplified Emscripten toolchain setup with auto-detection
# The extension auto-detects the host platform and downloads only necessary binaries
emscripten_toolchain = use_extension("//:emscripten_toolchain.bzl", "emscripten_toolchain")
use_repo(
    emscripten_toolchain,
    "emscripten_bin_linux",
    "emscripten_bin_linux_arm64",
    "emscripten_bin_mac",
    "emscripten_bin_mac_arm64",
    "emscripten_bin_win",
)

# Optional: Specify additional platforms beyond the auto-detected host platform
# Modern approach using Bazel platform constraints (recommended):
# emscripten_toolchain.platform(constraints = ["@platforms//os:macos", "@platforms//cpu:arm64"])
# emscripten_toolchain.platform(constraints = ["@platforms//os:windows", "@platforms//cpu:x86_64"])

# Legacy approach using custom platform names (backward compatible):
# emscripten_toolchain.platform(name = "mac_arm64")
# emscripten_toolchain.platform(name = "win")

# Optional: Specify Emscripten version (defaults to "latest")
# emscripten_toolchain.config(version = "3.1.51")

# All created emscripten_bin_* repositories are automatically exposed by the extension

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
)

# Default NPM translation for Linux (most common development platform)
# The emscripten_toolchain extension auto-detects the host platform, so this should
# work out of the box for Linux development. For other platforms, uncomment the
# corresponding translation below and add the platform to emscripten_toolchain.
npm.npm_translate_lock(
    name = "emscripten_npm_linux",
    data = ["@emscripten_bin_linux//:emscripten/package.json"],
    npm_package_lock = "@emscripten_bin_linux//:emscripten/package-lock.json",
)

# Uncomment and configure NPM translations for additional platforms as needed:
# For macOS development:
# npm.npm_translate_lock(
#     name = "emscripten_npm_mac",
#     data = ["@emscripten_bin_mac//:emscripten/package.json"],
#     npm_package_lock = "@emscripten_bin_mac//:emscripten/package-lock.json",
# )

# For macOS ARM64 development:
# npm.npm_translate_lock(
#     name = "emscripten_npm_mac_arm64",
#     data = ["@emscripten_bin_mac_arm64//:emscripten/package.json"],
#     npm_package_lock = "@emscripten_bin_mac_arm64//:emscripten/package-lock.json",
# )

# For Windows development:
# npm.npm_translate_lock(
#     name = "emscripten_npm_win",
#     data = ["@emscripten_bin_win//:emscripten/package.json"],
#     npm_package_lock = "@emscripten_bin_win//:emscripten/package-lock.json",
# )

use_repo(
    npm,
    "emscripten_npm_linux",
    # Uncomment additional repositories as needed:
    # "emscripten_npm_mac",
    # "emscripten_npm_mac_arm64", 
    # "emscripten_npm_win",
)

emscripten_cache = use_extension("//:emscripten_cache.bzl", "emscripten_cache")
use_repo(emscripten_cache, "emscripten_cache")

# Register toolchains for enabled platforms
# Note: The emscripten_toolchain extension creates toolchains only for enabled platforms
# (host platform by default + any additional platforms specified above)
# For simplicity, we register all potential toolchains - Bazel will only use the ones that exist
register_toolchains(
    "//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux",
    "//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux_arm64",
    "//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac",
    "//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac_arm64",
    "//emscripten_toolchain:cc-toolchain-wasm-emscripten_win",
)
